US-1 fix response for POST order